# harmony-design

./: .commit-message.txt  .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .env.staging  .eslintignore  .eslintrc.json  .git-commit-message  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM.md.backup  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  Dockerfile  README.md  check-import-cases.cjs  demo-advanced.html  demo-cascade.html  demo-components.html  docker-compose.yml  find-failing-test.cjs  package.json  package.json.backup  vercel.json
.github/: performance-budget.json
.husky/: pre-commit  pre-commit-bridge-validation
.storybook/: README.md  THEME.md  harmony-theme.js  main.js  manager-head.html  manager.js  package-scripts.md  preview-head.html  (+3 more)
bounded-contexts/component-lifecycle/: Cargo.toml  manifest.json
bounded-contexts/component-lifecycle/src/: lib.rs
bounded-contexts/wasm-edge-executor/: Cargo.toml  dispatch-protocol.js  dispatch-queue.js  dispatch-router.js  dispatch-target.js  dispatch-target.test.html  edge-binary-format.js  execution-context.js  execution-context.test.html  manifest.json  result-collector.js  sandboxed-executor-worker.js  sandboxed-executor.js  sandboxed-executor.test.html  worker-heartbeat-responder.js  worker-heartbeat.js  worker-pool.js
bounded-contexts/wasm-edge-executor/src/: edge_binary_format.rs  lib.rs
bounded-contexts/wasm-node-registry/: Cargo.toml
bounded-contexts/wasm-node-registry/src/: lib.rs  node_binary_format.rs  props_binary_format.rs
(+1176 files in other folders)
