[package]
name = "component-lifecycle-bc"
version = "0.1.0"
edition = "2021"

[dependencies]
harmony-schemas = { path = "../../harmony-schemas" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true