[package]
name = "wasm-node-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols